fix: Firefox scene detail toolbar not showing

--- a/src/app/components/results-menu/scene-detail/scene-detail.component.scss
+++ b/src/app/components/results-menu/scene-detail/scene-detail.component.scss
@@ -14,7 +14,7 @@ a {
 }
 
 .scrollable {
-  height: calc(100% - 36px);
+  height: calc(100% - 70px);
   overflow: auto;
 }
 
@@ -38,7 +38,6 @@ a {
 
 .browse-img {
   cursor: zoom-in;
-  padding-bottom: 35px;
 }
 
 .banner {
@@ -125,7 +124,4 @@ a {
   button:enabled {
     cursor: pointer;
   }
-}
-.height-sticky {
-  height: calc(100% - 35px);
 }
